deployment/rollingupdate/kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-ru-service
spec:
  selector:
    app: kube-ru
  ports:
    - port: 8080
  type: NodePort
