deployment/rollingupdate/kube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ez2learn.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-ru-service
                port:
                  number: 8080
